# Research-Track-tasks-

./: Draw3Rectagle.py  DrawRectangle.py  README.md  RobotControl.cpp
first_package_cpp/: CMakeLists.txt
first_package_cpp/src/: pub.cpp  sub.cpp
first_package_python/: setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/first_package_cpp/lib/first_package_cpp/: pub  talker
install/first_package_cpp/share/ament_index/resource_index/parent_prefix_path/: first_package_cpp
install/first_package_cpp/share/first_package_cpp/: package.sh  package.xml
install/first_package_python/lib/first_package_python/: pub  sub
install/first_package_python/share/first_package_python/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlesim_controller/lib/turtlesim_controller/: turtlesim_pub
install/turtlesim_controller/share/ament_index/resource_index/parent_prefix_path/: turtlesim_controller
install/turtlesim_controller/share/turtlesim_controller/: local_setup.sh  package.sh  package.xml
log/: latest_build
rosbag2_2025_12_02-13_02_19/: metadata.yaml  rosbag2_2025_12_02-13_02_19_0.mcap
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
turtlesim_controller/: CMakeLists.txt
turtlesim_controller/src/: turtle_ex1.cpp  turtle_ex2.cpp  turtlesim_pub.cpp  turtlesim_sub.cpp
